adding download app buttons

--- a/src/app/components/landing/crypto-price-tracker/crypto-price-tracker.component.html
+++ b/src/app/components/landing/crypto-price-tracker/crypto-price-tracker.component.html
@@ -1,5 +1,5 @@
 <!-- Start Logo -->
-<section class="py-20 relative bg-1">
+<section class="pt-20 relative bg-1">
   <div class="container">
     <div class="grid grid-cols-2 sm:grid-cols-2 lg:grid-cols-4 gap-6">
       <app-pair
@@ -9,5 +9,6 @@
       ></app-pair>
     </div>
   </div>
+  <div id="apps" class="p-14 apps"></div>
 </section>
 <!-- End Logo -->
