--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -2152,6 +2152,7 @@
 <!-- End Home -->
 
 <app-crypto-price-tracker></app-crypto-price-tracker>
+<app-apps></app-apps>
 
 <section class="!bg-[#c99c3b] h-auto">
   <div class="container py-10 relative">
