--- a/src/app/components/landing/plans/plans.component.html
+++ b/src/app/components/landing/plans/plans.component.html
@@ -22,11 +22,11 @@
         <h4 class="package-card__title base--color mb-2">
           Plan {{ plan.name }}
         </h4>
-        <ul class="package-card__features mt-4">
+        <ul class="package-card__features mt-4 !mb-20">
           <li>
             {{ plan.plan_type === "fixed" ? plan.days + " Days" : "Flexible" }}
           </li>
-          <li>{{ plan.profit }}</li>
+          <li>{{ "%" + plan.profit + " Profit" }}</li>
           <li>
             {{
               plan.plan_type === "fixed"
@@ -34,12 +34,18 @@
                 : "No Penalty!"
             }}
           </li>
-          <li>
+          <!-- <li>
             Total 30% + <span class="badge base--bg text-dark">Capital</span>
-          </li>
+          </li> -->
         </ul>
-        <div class="package-card__range mt-5 my-10 base--color">$200</div>
-        <a href="#0" class="cmn-btn btn-md mt-5">Invest Now</a>
+        <!-- <div class="package-card__range mt-5 my-10 base--color">$200</div> -->
+
+        <a
+          (click)="goToAppsSection()"
+          class="cmn-btn btn-md mt-5 cursor-pointer select-none"
+          >Invest Now</a
+        >
+        <!-- <button (click)="goToAppsSection()">Scroll to Green DIV</button> -->
       </div>
     </div>
   </div>
