--- a/src/app/layouts/landing-layout/landing-layout.component.html
+++ b/src/app/layouts/landing-layout/landing-layout.component.html
@@ -87,7 +87,7 @@
             </button>
           </div>
           <div class="hidden md:block">
-            <ul class="list-none flex space-x-3 items-center">
+            <!-- <ul class="list-none flex space-x-3 items-center">
               <li [class.active]="this.router.url === '/'">
                 <a
                   [routerLink]="['/']"
@@ -109,7 +109,7 @@
                   >register</a
                 >
               </li>
-            </ul>
+            </ul> -->
           </div>
         </div>
       </div>
@@ -216,13 +216,13 @@
       <div class="row justify-content-center">
         <div class="col-lg-12 text-center">
           <a [routerLink]="['/']" class="footer-logo"></a>
-          <ul class="flex flex-wrap justify-center mt-4 gap-6">
+          <!-- <ul class="flex flex-wrap justify-center mt-4 gap-6">
             <li><a [routerLink]="['/']">HOME</a></li>
             <li><a [routerLink]="['/login']">LOGIN</a></li>
             <li>
               <a [routerLink]="['/register']">REGISTER</a>
             </li>
-          </ul>
+          </ul> -->
         </div>
       </div>
     </div>
