--- a/src/app/components/landing/apps/apps.component.html
+++ b/src/app/components/landing/apps/apps.component.html
@@ -4,11 +4,12 @@
       <div class="col-xl-8">
         <div class="cta-wrapper bg_img border-radius--10 text-center bg-8">
           <h2 class="title mb-3 text-white">
-            Download Diamond-Gate Application And Start Investing
+            Download Diamond Stake Application And Start Investing
           </h2>
           <div class="flex items-center justify-center gap-5 flex-wrap mt-10">
             <a
-              href="hrrp://app.diamond-gate.com/android.apk"
+              href="../../../../applications/diamond-stake.apk"
+              download="diamond-stake.apk"
               target="_blank"
               class="flex items-center justify-center app-link bg-[#C99C3B] rounded-full"
             >
