--- a/src/app/components/landing/steps/steps.component.html
+++ b/src/app/components/landing/steps/steps.component.html
@@ -4,7 +4,7 @@
       <div class="section-header">
         <h2 class="section-title">
           <span class="font-weight-normal text-white">How</span>
-          <b class="base--color mx-1.5">DiamondGate</b>
+          <b class="base--color mx-1.5">Diamond Stake</b>
           <span class="font-weight-normal text-white">Works</span>
         </h2>
         <p>
