--- a/src/app/layouts/landing-layout/landing-layout.component.html
+++ b/src/app/layouts/landing-layout/landing-layout.component.html
@@ -208,7 +208,7 @@
         </div>
         <div class="name">
           <span class="text-3xl uppercase text-white">Diamond</span>
-          <span class="text-3xl uppercase text-[#EABA4C]">Gate</span>
+          <span class="text-3xl uppercase text-[#EABA4C]">Stake</span>
         </div>
       </div>
     </div>
@@ -230,8 +230,8 @@
   <div class="bg-black w-full py-5 flex items-center justify-center">
     <div class="container text-center">
       <span>
-        © 2023 <span class="base--color text-[#EABA4C]">DIAMONDGATE</span>. All
-        rights reserved
+        © 2023 <span class="base--color text-[#EABA4C]">DIAMOND-STAKE</span>.
+        All rights reserved
       </span>
     </div>
   </div>
