--- a/src/app/components/auth/register/register.component.html
+++ b/src/app/components/auth/register/register.component.html
@@ -6,7 +6,7 @@
 >
   <div class="text-white text-base text-right">
     <h2 class="text-lg font-bold text-center w-full !text-[#eaecef]">
-      DIAMOND GATE
+      DIAMOND STAKE
       <p
         class="text-center w-full text-base mt-3 font-normal pb-10 text-[#afb5c1]"
       >
