--- a/src/app/components/landing/apps/apps.component.html
+++ b/src/app/components/landing/apps/apps.component.html
@@ -8,8 +8,8 @@
           </h2>
           <div class="flex items-center justify-center gap-5 flex-wrap mt-10">
             <a
-              href="../../../../assets/apps/diamond-gate.apk"
-              download="diamond-stake.apk"
+              href="../../../../assets/apps/Diamond-Stake-1.0.4.apk"
+              download="Diamond-Stake-1.0.4.apk"
               target="_blank"
               class="flex items-center justify-center app-link bg-[#C99C3B] rounded-full"
             >
