--- a/src/app/layouts/landing-layout/landing-layout.component.html
+++ b/src/app/layouts/landing-layout/landing-layout.component.html
@@ -123,7 +123,7 @@
                 >HOME</a
               >
             </li>
-            <li class="features">
+            <!-- <li class="features">
               <a
                 [routerLink]="['/login']"
                 class="font-medium hover:text-green ease-in-out duration-300 inline-block leading-6 p-2"
@@ -136,7 +136,7 @@
                 class="font-medium hover:text-green ease-in-out duration-300 inline-block leading-6 p-2"
                 >REGISTER</a
               >
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
