remove lorem ipsum

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -2214,7 +2214,7 @@
 </section> -->
 <!-- End Services -->
 
-<section class="py-20 relative">
+<!-- <section class="py-20 relative">
   <div class="container">
     <div class="grid grid-cols-1">
       <div class="bg-[#121212] rounded-xl overflow-hidden">
@@ -2222,4 +2222,4 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
