--- a/src/app/components/landing/apps/apps.component.html
+++ b/src/app/components/landing/apps/apps.component.html
@@ -4,71 +4,15 @@
       <div class="col-xl-8">
         <div class="cta-wrapper bg_img border-radius--10 text-center bg-8">
           <h2 class="title mb-3 text-white">
-            Download Diamond Stake Application And Start Investing
+            Scan the QR COde to install the DIAMOND-STAKE application on your phone
           </h2>
           <div class="flex items-center justify-center gap-5 flex-wrap mt-10">
             <a
-              href="../../../../assets/apps/Diamond-Stake-1.0.4.apk"
-              download="Diamond-Stake-1.0.4.apk"
+              href="https://app.diamond-stake.com/install"
               target="_blank"
               class="flex items-center justify-center app-link bg-[#C99C3B] rounded-full"
             >
-              <div class="flex gap-4 items-center py-2 pl-2 pr-5 w-72">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="410"
-                  height="410"
-                  viewBox="0 0 410 410"
-                  class="w-12 h-12 shadow-2xl rounded-full"
-                >
-                  <g id="Layer_x0020_1" transform="translate(-81 -81)">
-                    <circle
-                      id="Ellipse_1"
-                      data-name="Ellipse 1"
-                      cx="205"
-                      cy="205"
-                      r="205"
-                      transform="translate(81 81)"
-                      fill="#98c425"
-                    />
-                    <g id="_1965096675696" transform="translate(157.19 227.98)">
-                      <path
-                        id="Path_1"
-                        data-name="Path 1"
-                        d="M585.8,326h0a23.179,23.179,0,0,1,16.2,6.6c3.6,4.2,6.6,9.6,6.6,16.2v71.99c0,6-3,12-6.6,16.2h-.6c-3.6,4.2-9.6,6.6-15.6,6.6h0a23.179,23.179,0,0,1-16.2-6.6v-.6a21.784,21.784,0,0,1-6.6-15.6V348.8c0-6.6,3-12,6.6-16.2A23.179,23.179,0,0,1,585.8,326Z"
-                        transform="translate(-350.028 -326)"
-                        fill="#fefefe"
-                        fill-rule="evenodd"
-                      />
-                      <path
-                        id="Path_2"
-                        data-name="Path 2"
-                        d="M230.8,326h0a21.784,21.784,0,0,1,15.6,6.6,22.153,22.153,0,0,1,6.6,16.2v71.99a23.179,23.179,0,0,1-6.6,16.2h0a21.784,21.784,0,0,1-15.6,6.6h0a22.536,22.536,0,0,1-22.8-22.8V348.8A22.536,22.536,0,0,1,230.8,326Z"
-                        transform="translate(-208 -326)"
-                        fill="#fefefe"
-                        fill-rule="evenodd"
-                      />
-                    </g>
-                    <path
-                      id="Path_3"
-                      data-name="Path 3"
-                      d="M450.378,332V447.184a26.32,26.32,0,0,1-7.8,18.6h0a25.872,25.872,0,0,1-18,7.2h-1.8v38.395c0,6-3,11.4-6.6,15.6h-.6c-3.6,4.2-9.6,6.6-15.6,6.6h0a23.179,23.179,0,0,1-16.2-6.6h0a21.784,21.784,0,0,1-6.6-15.6V472.98h-15.6v38.395c0,6-2.4,12-6.6,15.6a21.784,21.784,0,0,1-15.6,6.6h0a22.153,22.153,0,0,1-16.2-6.6h0a21.784,21.784,0,0,1-6.6-15.6V472.98h-1.8a28.6,28.6,0,0,1-18.6-7.2v-.6a24.419,24.419,0,0,1-7.2-18V332a6.012,6.012,0,0,1,6-6h149.38A6.012,6.012,0,0,1,450.378,332Z"
-                      transform="translate(-83.217 -98.02)"
-                      fill="#fefefe"
-                      fill-rule="evenodd"
-                    />
-                    <path
-                      id="Path_4"
-                      data-name="Path 4"
-                      d="M369.389,177.579h0a90.127,90.127,0,0,1,31.2,6l12.6-16.2c1.8-3,5.4-3,8.4-1.2a6.451,6.451,0,0,1,1.2,8.4l-11.4,14.4c4.2,3,8.4,6,12.6,9.6a79.344,79.344,0,0,1,25.8,52.193,5.078,5.078,0,0,1-4.8,6h-.6v.6H295a6.451,6.451,0,0,1-6-6v-1.2a82.8,82.8,0,0,1,26.4-51.593l9-7.2-12.6-16.8a5.8,5.8,0,0,1,.6-8.4c3-1.8,6.6-1.8,8.4,1.2l14.4,18A81.663,81.663,0,0,1,369.389,177.579Zm-25.8,34.2a9.6,9.6,0,0,1,0,19.2c-5.4,0-10.2-4.2-10.2-9.6S338.193,211.775,343.593,211.775Zm52.193,0a9.6,9.6,0,1,1-9.6,9.6A9.476,9.476,0,0,1,395.786,211.775Z"
-                      transform="translate(-83.217 -33.588)"
-                      fill="#fefefe"
-                      fill-rule="evenodd"
-                    />
-                  </g>
-                </svg>
-                <span class="text-base">Download For Android</span>
-              </div>
+              <img src="../../../../assets/images/qrcode_app.png" alt="" class="w-40 h-40" />
             </a>
             <a
               href="#"
