--- a/src/app/components/landing/apps/apps.component.html
+++ b/src/app/components/landing/apps/apps.component.html
@@ -4,7 +4,7 @@
       <div class="col-xl-8">
         <div class="cta-wrapper bg_img border-radius--10 text-center bg-8">
           <h2 class="title mb-3 text-white">
-            Scan the QR COde to install the DIAMOND-STAKE application on your phone
+            Scan the QR CODE to install the DIAMOND-STAKE application on your phone or click on it if you already opned it on your mobile device
           </h2>
           <div class="flex items-center justify-center gap-5 flex-wrap mt-10">
             <a
@@ -14,37 +14,7 @@
             >
               <img src="../../../../assets/images/qrcode_app.png" alt="" class="w-40 h-40" />
             </a>
-            <a
-              href="#"
-              class="flex items-center justify-center app-link bg-[#C99C3B] rounded-full"
-            >
-              <div class="flex gap-4 items-center py-2 pl-2 pr-5 w-72">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  xmlns:xlink="http://www.w3.org/1999/xlink"
-                  enable-background="new 0 0 512 512"
-                  id="Layer_1"
-                  version="1.1"
-                  viewBox="0 0 512 512"
-                  xml:space="preserve"
-                  class="w-12 h-12 shadow-2xl rounded-full"
-                >
-                  <circle
-                    cx="256"
-                    cy="256"
-                    fill="#666666"
-                    id="ellipse"
-                    r="256"
-                  />
-                  <path
-                    d="M274.7,83.3c12.9-15.2,34.7-26.5,52.9-27.3c2.4,21.1-6.2,42.3-18.6,57.5  c-12.5,15.3-32.9,27-53.2,25.4C252.9,118.4,263.1,96.9,274.7,83.3z M377.2,371.3c-15,21.9-30.4,43.7-54.9,44.2  c-24.1,0.4-31.7-14.3-59.2-14.3s-36.1,13.7-58.8,14.7c-23.6,0.9-41.6-23.7-56.6-45.5C117,325.7,93.5,244.1,125.1,189  c15.6-27.3,43.6-44.6,74.2-45.1c23.2-0.3,45,15.6,59.2,15.6c14.2,0,40.7-19.3,68.6-16.5c11.7,0.4,44.5,4.7,65.5,35.6  c-1.6,1.1-39.2,22.9-38.7,68.6c0.4,54.4,47.5,72.5,48.1,72.8C401.6,321.4,394.6,346,377.2,371.3z"
-                    fill="#FFFFFF"
-                    id="logo"
-                  />
-                </svg>
-                <span class="text-base text-center">Download For IOS</span>
-              </div>
-            </a>
+            
           </div>
           <!-- <p>
             This is a Revolutionary Money Making Platform! Invest for Future in
